# bolt402

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check-npm-releases.yml  check-pypi-releases.yml  ci.yml  publish-bolt402-ai-sdk.yml  publish-bolt402-langchain.yml  publish-bolt402-python.yml  publish-bolt402-wasm.yml  publish-l402-python.yml  regtest.yml
bindings/bolt402-go/: README.md  go.mod
bindings/l402-go/: README.md  go.mod  l402.go  l402_test.go
crates/bolt402-cln/: Cargo.toml  build.rs
crates/bolt402-cln/src/: backend.rs  error.rs  lib.rs
crates/bolt402-core/: Cargo.toml
crates/bolt402-core/src/: budget.rs  cache.rs  error.rs  lib.rs  port.rs  receipt.rs
crates/bolt402-lnd/: Cargo.toml  build.rs
crates/bolt402-lnd/src/: backend.rs  error.rs  grpc.rs  lib.rs  rest.rs
crates/bolt402-proto/: Cargo.toml
crates/bolt402-proto/src/: challenge.rs  error.rs  lib.rs  token.rs
crates/bolt402-python/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/bolt402-python/python/bolt402/: __init__.py
crates/bolt402-python/src/: lib.rs
crates/bolt402-python/tests/: test_bolt402.py  test_regtest.py
crates/bolt402-swissknife/src/: backend.rs  lib.rs  types.rs
crates/bolt402-wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/bolt402-wasm/src/: backends.rs  client.rs  lib.rs
crates/bolt402-wasm/tests/: web.rs
crates/bolt402-wasm/tests/node/tests/: backends.test.ts  client.test.ts  regtest.test.ts
crates/l402-cln/: Cargo.toml  build.rs
crates/l402-cln/src/: error.rs  grpc.rs  lib.rs  rest.rs
crates/l402-core/: Cargo.toml
crates/l402-core/src/: budget.rs  cache.rs  client.rs  lib.rs  receipt.rs
crates/l402-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/l402-ffi/include/: l402.h
crates/l402-ffi/src/: lib.rs
crates/l402-lnd/: Cargo.toml  build.rs
crates/l402-lnd/src/: error.rs  grpc.rs  lib.rs  rest.rs
crates/l402-mock/: Cargo.toml
crates/l402-mock/examples/: demo.rs
crates/l402-mock/src/: backend.rs  challenge.rs  lib.rs  server.rs
crates/l402-mock/tests/: integration.rs
crates/l402-nwc/: Cargo.toml
crates/l402-nwc/src/: backend.rs  error.rs  lib.rs
crates/l402-proto/: Cargo.toml
crates/l402-proto/src/: bolt11.rs  challenge.rs  client_error.rs  lib.rs  port.rs  token.rs
crates/l402-python/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/l402-python/python/l402/: __init__.py
crates/l402-python/src/: lib.rs
crates/l402-python/tests/: test_bolt402.py  test_regtest.py
crates/l402-sqlite/: Cargo.toml
crates/l402-sqlite/src/: error.rs  lib.rs  migration.rs  store.rs
crates/l402-swissknife/: Cargo.toml
crates/l402-swissknife/src/: backend.rs  lib.rs  types.rs
crates/l402-wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/l402-wasm/src/: backends.rs  client.rs  lib.rs
crates/l402-wasm/tests/: web.rs
crates/l402-wasm/tests/node/: package.json  setup.ts  tsconfig.json  vitest.config.ts
crates/l402-wasm/tests/node/tests/: backends.test.ts  client.test.ts  init.test.ts  regtest.test.ts
demos/comparison/: README.md  package.json
demos/comparison/src/app/: layout.tsx  page.tsx
demos/comparison/src/components/: FeatureTable.tsx
demos/comparison/src/lib/: snippets.ts
demos/l402-explorer/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
demos/l402-explorer/src/app/: globals.css  layout.tsx  page.tsx
demos/l402-explorer/src/app/api/chat/: route.ts
demos/l402-explorer/src/app/api/l402-fetch/: route.ts
demos/l402-explorer/src/app/api/l402-receipts/: route.ts
demos/l402-explorer/src/components/: ChatPanel.tsx  ProtocolFlow.tsx  ServiceBrowser.tsx  ServiceCard.tsx  SpendingDashboard.tsx
demos/l402-explorer/src/lib/: l402-shared.ts  mock-backend.ts  satring.ts  types.ts
demos/l402-explorer/src/lib/bolt402/: budget.ts  index.ts  l402-client.ts  token-store.ts  tools.ts  types.ts
demos/l402-explorer/src/lib/bolt402/backends/: index.ts  lnd.ts  swissknife.ts
docs/: architecture.md
docs/design/: 001-l402-client.md  002-mock-server.md  003-lnd-backend.md  004-swissknife-backend.md  005-integration-tests.md  006-vercel-ai-sdk.md  007-contributing-templates-changelog.md  008-comprehensive-docs.md  009-bolt11-amount-decoding.md  010-python-bindings.md  011-langchain-example.md  012-comparison-page.md  042-go-bindings.md  045-wasm-bindings.md  047-sqlite-token-store.md  050-nwc-backend.md  052-cln-backend.md  055-langchain-integration.md  067-mpp-protocol.md
docs/tutorials/: budget-control.md  custom-backend.md  getting-started.md
examples/ai-agent/: README.md  index.ts  package.json
examples/basic-mock/: Cargo.toml  main.rs
examples/budget-control/: Cargo.toml  main.rs
examples/langchain/: README.md  langchain_example.py  requirements.txt
tests/regtest/: Cargo.toml  README.md  docker-compose.yml
tests/regtest/aperture/: aperture.yaml
tests/regtest/backend/: server.js
tests/regtest/cln/: config
tests/regtest/lnd/: alice.conf  bob.conf
tests/regtest/scripts/: init-regtest.sh
tests/regtest/src/: lib.rs
tests/regtest/swissknife/: regtest.toml
tests/regtest/tests/: budget_enforcement.rs  cln_flow.rs  cln_rest_flow.rs  lnd_grpc_flow.rs  lnd_rest_flow.rs  sqlite_persistence.rs  swissknife_flow.rs  token_caching.rs
