[workspace]
resolver = "2"
members = [
    "crates/bolt402-proto",
    "crates/bolt402-core",
]

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints (too noisy for library code)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitcoin-numeraire/bolt402"
homepage = "https://github.com/bitcoin-numeraire/bolt402"
documentation = "https://docs.rs/bolt402-core"
rust-version = "1.85"
authors = ["Dario Anongba Varela <dario.anongba@gmail.com>"]

[workspace.dependencies]
# Internal crates
bolt402-proto = { path = "crates/bolt402-proto" }
bolt402-core = { path = "crates/bolt402-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Crypto
base64 = "0.22"

# Async traits
async-trait = "0.1"

# Testing
mockall = "0.13"
tokio-test = "0.4"
