[workspace]
resolver = "2"
members = [
    "crates/bolt402-proto",
    "crates/bolt402-core",
    "crates/bolt402-lnd",
    "crates/bolt402-cln",
    "crates/bolt402-mock",
    "crates/bolt402-swissknife",
    "crates/bolt402-sqlite",
    "crates/bolt402-nwc",
    "crates/bolt402-ffi",
    "crates/bolt402-python",
    "crates/bolt402-wasm",
    "examples/basic-mock",
    "examples/budget-control",
    "tests/regtest",
]
# Exclude bolt402-python and bolt402-wasm from default builds.
# bolt402-python requires Python dev libs for linking.
# bolt402-wasm requires wasm32-unknown-unknown target.
# Use `maturin develop` + `pytest` for Python, `wasm-pack` for WASM.
default-members = [
    "crates/bolt402-proto",
    "crates/bolt402-core",
    "crates/bolt402-lnd",
    "crates/bolt402-cln",
    "crates/bolt402-mock",
    "crates/bolt402-swissknife",
    "crates/bolt402-sqlite",
    "crates/bolt402-nwc",
    "examples/basic-mock",
    "examples/budget-control",
]

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints (too noisy for library code)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightninglabs/bolt402"
homepage = "https://github.com/lightninglabs/bolt402"
documentation = "https://docs.rs/bolt402-core"
rust-version = "1.85"
authors = ["Dario Anongba Varela <dario.anongba@gmail.com>"]

[workspace.dependencies]
# Internal crates
bolt402-proto = { path = "crates/bolt402-proto" }
bolt402-core = { path = "crates/bolt402-core" }
bolt402-lnd = { path = "crates/bolt402-lnd", default-features = false }
bolt402-mock = { path = "crates/bolt402-mock" }
bolt402-swissknife = { path = "crates/bolt402-swissknife" }
bolt402-sqlite = { path = "crates/bolt402-sqlite" }
bolt402-nwc = { path = "crates/bolt402-nwc" }
bolt402-cln = { path = "crates/bolt402-cln", default-features = false }
bolt402-ffi = { path = "crates/bolt402-ffi" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"



# HTTP server
axum = "0.8"

# Crypto
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# Async traits
async-trait = "0.1"

# Testing
mockall = "0.14"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
