[workspace]
resolver = "2"
members = [
    "crates/l402-proto",
    "crates/l402-core",
    "crates/l402-lnd",
    "crates/l402-cln",
    "crates/l402-mock",
    "crates/l402-swissknife",
    "crates/l402-sqlite",
    "crates/l402-nwc",
    "crates/l402-ffi",
    "crates/l402-python",
    "crates/l402-wasm",
    "examples/basic-mock",
    "examples/budget-control",
    "tests/regtest",
]
# Exclude l402-python and l402-wasm from default builds.
# l402-python requires Python dev libs for linking.
# l402-wasm requires wasm32-unknown-unknown target.
# Use `maturin develop` + `pytest` for Python, `wasm-pack` for WASM.
default-members = [
    "crates/l402-proto",
    "crates/l402-core",
    "crates/l402-lnd",
    "crates/l402-cln",
    "crates/l402-mock",
    "crates/l402-swissknife",
    "crates/l402-sqlite",
    "crates/l402-nwc",
    "examples/basic-mock",
    "examples/budget-control",
]

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints (too noisy for library code)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightninglabs/L402sdk"
homepage = "https://github.com/lightninglabs/L402sdk"
documentation = "https://docs.rs/l402-core"
rust-version = "1.85"
authors = ["Dario Anongba Varela <dario.anongba@gmail.com>"]

[workspace.dependencies]
# Internal crates
l402-proto = { path = "crates/l402-proto" }
l402-core = { path = "crates/l402-core" }
l402-lnd = { path = "crates/l402-lnd", default-features = false }
l402-mock = { path = "crates/l402-mock" }
l402-swissknife = { path = "crates/l402-swissknife" }
l402-sqlite = { path = "crates/l402-sqlite" }
l402-nwc = { path = "crates/l402-nwc" }
l402-cln = { path = "crates/l402-cln", default-features = false }
l402-ffi = { path = "crates/l402-ffi" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"



# HTTP server
axum = "0.8"

# Crypto
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# Async traits
async-trait = "0.1"

# Testing
mockall = "0.14"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
