[package]
name = "bolt402-core"
description = "L402 client SDK core: protocol engine, token cache, budget tracker, and Lightning backend abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["authentication", "web-programming::http-client"]
keywords = ["l402", "lightning", "bitcoin", "payments", "sdk"]

[dependencies]
bolt402-proto = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = { workspace = true }
