[package]
name = "bolt402-lnd"
description = "LND backend adapters (gRPC + REST) for bolt402 L402 client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["authentication", "web-programming::http-client"]
keywords = ["l402", "lightning", "bitcoin", "lnd"]

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:prost"]
rest = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:base64", "dep:sha2"]

[dependencies]
bolt402-core = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }

# gRPC dependencies (behind grpc feature)
tonic = { version = "0.12", features = ["tls"], optional = true }
prost = { version = "0.13", optional = true }

# REST dependencies (behind rest feature)
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
