[package]
name = "bolt402-python"
description = "Python bindings for bolt402 L402 client SDK via PyO3"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["api-bindings"]
keywords = ["l402", "lightning", "bitcoin", "python", "pyo3"]

[lib]
name = "bolt402"
crate-type = ["cdylib"]

[dependencies]
bolt402-proto = { workspace = true }
bolt402-core = { workspace = true }
bolt402-lnd = { workspace = true, default-features = false, features = ["rest"] }
bolt402-cln = { workspace = true, default-features = false, features = ["rest"] }
bolt402-swissknife = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

[lints]
workspace = true
