[package]
name = "l402-cln"
description = "Core Lightning (CLN) backend adapters (gRPC + REST) for L402sdk L402 client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["authentication", "web-programming::http-client"]
keywords = ["l402", "lightning", "bitcoin", "cln"]

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:prost", "dep:tokio"]
rest = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dependencies]
l402-proto = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# gRPC needs tokio for file I/O (reading certs)
tokio = { workspace = true, features = ["sync", "fs"], optional = true }

# gRPC dependencies (behind grpc feature)
tonic = { version = "0.12", features = ["tls"], optional = true }
prost = { version = "0.13", optional = true }

# REST dependencies (behind rest feature)
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
