[package]
name = "l402-ffi"
description = "C-compatible FFI layer for L402sdk L402 client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["api-bindings"]
keywords = ["l402", "lightning", "bitcoin", "ffi", "c"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
l402-proto = { workspace = true }
l402-core = { workspace = true }
l402-mock = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

[build-dependencies]
cbindgen = "0.28"

[lints]
workspace = true
