[package]
name = "l402-mock"
description = "Mock L402 server and Lightning backend for testing L402sdk clients"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["development-tools::testing"]
keywords = ["l402", "lightning", "mock", "testing"]

[dependencies]
l402-proto = { workspace = true }
l402-core = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["net", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
