[package]
name = "l402-python"
description = "Python bindings for L402sdk L402 client SDK via PyO3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["api-bindings"]
keywords = ["l402", "lightning", "bitcoin", "python", "pyo3"]

[lib]
name = "l402"
crate-type = ["cdylib"]

[dependencies]
l402-proto = { workspace = true }
l402-core = { workspace = true }
l402-lnd = { workspace = true, features = ["grpc", "rest"] }
l402-cln = { workspace = true, features = ["grpc", "rest"] }
l402-swissknife = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
rustls = { version = "0.23", features = ["aws_lc_rs"], default-features = false }

[lints]
workspace = true
