[package]
name = "l402-sqlite"
description = "SQLite persistent token store for L402sdk L402 client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["caching", "database"]
keywords = ["l402", "lightning", "bitcoin", "sqlite", "token-store"]

[dependencies]
l402-proto = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }
tempfile = "3"

[lints]
workspace = true
