[package]
name = "l402-swissknife"
description = "SwissKnife REST API backend adapter for L402sdk L402 client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
l402-proto = { workspace = true }

async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
