[package]
name = "l402-wasm"
description = "WebAssembly bindings for L402sdk L402 client SDK via wasm-pack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["api-bindings", "wasm"]
keywords = ["l402", "lightning", "bitcoin", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
l402-proto = { workspace = true }
l402-core = { workspace = true }
l402-lnd = { workspace = true, default-features = false, features = ["rest"] }
l402-cln = { workspace = true, default-features = false, features = ["rest"] }
l402-swissknife = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
