[package]
name = "example-budget-control"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "budget-control"
path = "main.rs"

[dependencies]
l402-core = { path = "../../crates/l402-core" }
l402-mock = { path = "../../crates/l402-mock" }
tokio = { version = "1", features = ["full"] }
